# Taller_W_HPCSE-aceleracion

./: CMakeLists.txt  Taller_aceleracion_CPU.ipynb
